# SmartTrackBLE_nRF52832

./: .gitignore  CMakeLists.txt  Kconfig  Kconfig.sysbuild  prj_app.conf  sysbuild.cmake
configuration/: pm_static_nrf52dk_nrf52832.yml  pm_static_nrf52dk_nrf52832_1.yml  pm_static_nrf52dk_nrf52832_release.yml  prj.conf  prj_debug.conf  prj_release.conf
configuration/boards/: nrf52dk_nrf52832_cpuapp.overlay  nrf52dk_nrf52832_cpuapp_common.dtsi
include/: app_dfu.h  app_nvs_storage.h  app_vision_advt.h  app_vision_bootup.h  app_vision_custom_services.h  app_vision_motion.h  app_vision_production.h  app_vision_time_manager.h  app_watchdog.h
src/: Kconfig.battery  Kconfig.ble  Kconfig.motion  Kconfig.time  dfu.c  factory_reset.c  fp_adv.c  main.c  nvs_storage.c  vision_advt.c  vision_battery.c  vision_bootup.c  vision_custom_services.c  vision_motion.c  vision_nvs_storage.c  vision_production.c  vision_time_manager.c  vision_watchdog.c
src/battery/: CMakeLists.txt  Kconfig.battery  platform_SBT.c
src/motion_detector/: CMakeLists.txt  platform_SBT.c
src/motion_detector/include/: app_motion_detector.h
src/ui/: CMakeLists.txt  Kconfig.ui  platform_SBT.c  platform_dk.c
src/ui/include/: app_ui.h
sysbuild/mcuboot/: prj.conf
